--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "course_design_front",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.26"
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0",
+    "pinia": "^2.1.0",
+    "element-plus": "^2.3.0",
+    "axios": "^1.4.0",
+    "@element-plus/icons-vue": "^2.1.0",
+    "echarts": "^5.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.3",
-    "vite": "^7.3.0",
-    "vite-plugin-vue-devtools": "^8.0.5"
+    "@vitejs/plugin-vue": "4.6.2",
+    "vite": "4.5.14"
   }
 }
